--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -23,6 +23,7 @@ jobs:
         shell: python
   run-windows-command:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: powershell-commands
         run: Get-Location
